@@ -238,7 +238,11 @@ CORBA::SystemException::_info (void) const
 
   ACE_CString info = "system exception, ID '";
   info += this->_rep_id ();
+#if defined (TAO_SKIP_NEW_LINE_IN_EXCEPTION_LOGGING)
+  info += "'; ";
+#else
   info += "'\n";
+#endif
 
   CORBA::ULong const VMCID = this->minor () & 0xFFFFF000u;
 
@@ -395,7 +399,11 @@ CORBA::SystemException::_info (void) const
       ACE_OS::sprintf (buffer,
                        "TAO exception, "
                        "minor code = %x (%s; %s), "
+#if defined (TAO_SKIP_NEW_LINE_IN_EXCEPTION_LOGGING)
+                       "completed = %s; ",
+#else
                        "completed = %s\n",
+#endif
                        minor_code,
                        location,
                        errno_indication,
@@ -424,7 +432,11 @@ CORBA::SystemException::_info (void) const
       ACE_OS::sprintf (buffer,
                        "OMG minor code (%d), "
                        "described as '%s', "
+#if defined (TAO_SKIP_NEW_LINE_IN_EXCEPTION_LOGGING)
+                       "completed = %s; ",
+#else
                        "completed = %s\n",
+#endif
                        minor_code,
                        minor_description,
                        (completed () == CORBA::COMPLETED_YES) ? "YES" :
@@ -439,7 +451,11 @@ CORBA::SystemException::_info (void) const
       char buffer[BUFSIZ];
       ACE_OS::sprintf (buffer,
                        "Unknown vendor minor code id (%x), "
+#if defined (TAO_SKIP_NEW_LINE_IN_EXCEPTION_LOGGING)
+                       "minor code = %x, completed = %s; ",
+#else
                        "minor code = %x, completed = %s\n",
+#endif
                        VMCID,
                        this->minor (),  // Use the raw minor code
                        (completed () == CORBA::COMPLETED_YES) ? "YES" :
